1.feed详情基本框架完成

--- a/app/src/main/res/layout/fragment_more_nav.xml
+++ b/app/src/main/res/layout/fragment_more_nav.xml
@@ -76,7 +76,7 @@
                             android:textSize="12sp"
                             android:textColor="#999999"
                             android:ellipsize="end"
-                            android:text="点击查看个人资料"/>
+                            android:text="个人详细资料"/>
 
 
                     </LinearLayout>
