--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="app_sys_color">#ffa051</color>
     <color name="bottom_bar_inactive">#666666</color>
     <color name="bottom_bar_active">#ffa051</color>
-    <color name="translate">#00000000</color>
+    <color name="translate">#9000</color>
     <color name="bg_explore_love">#37363c</color>
 
 
