--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -3,37 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="#f0f0f0"
+    android:background="#ffffff"
     android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/item_user_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
-        android:paddingLeft="16dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/user_avatar"
-            android:layout_width="32dp"
-            android:layout_height="32dp"/>
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="12dp"
-            android:paddingBottom="12dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="15dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/user_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:paddingBottom="6dp"
-                android:textSize="12sp"
-                android:textColor="#666666"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:textSize="14sp"
+                android:textColor="#cccccc"
                 android:ellipsize="end"
                 android:text=""/>
 
@@ -41,10 +43,10 @@
                 android:id="@+id/comment_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textColor="#999999"
                 android:ellipsize="end"
-                android:layout_gravity="clip_vertical"
+                android:layout_gravity="center_vertical"
                 android:text="暂时没有任何评论"/>
 
         </LinearLayout>
@@ -58,6 +60,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginLeft="60dp"
         android:background="#e6e6e6"/>
 </LinearLayout>
