--- a/playerlibrary/src/main/res/layout/zz_video_player_title_bar.xml
+++ b/playerlibrary/src/main/res/layout/zz_video_player_title_bar.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
             android:src="@drawable/zz_player_back"/>
     </RelativeLayout>
 
@@ -29,5 +29,5 @@
         android:gravity="center_vertical"
         android:maxEms="10"
         android:singleLine="true"
-        android:text="zz_player"/>
+        android:text=""/>
 </LinearLayout>
