--- a/app/src/main/res/layout/activity_pic_new.xml
+++ b/app/src/main/res/layout/activity_pic_new.xml
@@ -88,6 +88,7 @@
             android:layout_width="280dp"
             android:layout_height="36dp"
             android:layout_marginLeft="10dp"
+            android:paddingLeft="6dp"
             android:background="@drawable/shape_edit_button"
             android:gravity="left|center_vertical"
             android:textColor="#ffffff"
