--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -73,7 +73,8 @@
             android:id="@+id/toolbar_comment_image"
             android:layout_width="160dp"
             android:layout_height="34dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="10dp"
+            android:paddingLeft="6dp"
             android:background="@drawable/shape_edit"
             android:layout_weight="1"
             android:gravity="left|center_vertical"
