--- a/app/src/main/res/layout/fragment_more_nav.xml
+++ b/app/src/main/res/layout/fragment_more_nav.xml
@@ -127,7 +127,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_gravity="center"
+                    android:layout_gravity="right"
                     android:orientation="vertical">
 
                     <TextView
@@ -136,7 +136,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="#333333"
                         android:textSize="16sp"
-                        android:layout_gravity="center_horizontal"
+                        android:layout_gravity="center"
                         android:text="0"/>
 
                     <TextView
@@ -160,7 +160,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="2dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:paddingTop="20dp"
@@ -175,6 +175,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_gravity="left"
                     android:orientation="vertical">
 
                     <TextView
@@ -229,7 +230,6 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="15dp"
                         android:layout_weight="1"
                         android:layout_gravity="center_vertical"
                         android:orientation="vertical">
@@ -252,6 +252,7 @@
                             android:layout_gravity="center_vertical"
                             android:textSize="22sp"
                             android:textColor="#333333"
+                            android:textStyle="bold"
                             android:ellipsize="end"
                             android:text="0元"/>
 
