--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -105,6 +105,15 @@
             android:layout_weight="1"
             android:src="@mipmap/xiangqing_icon_fenxiang"/>
 
+        <ImageView
+            android:id = "@+id/toolbar_rec_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:src="@mipmap/xiangqing_icon_rec"
+            android:visibility="gone"/>
+
 
 
     </LinearLayout>
