--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -1,18 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#ffffff">
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/layout_toolbar" />
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:collapsedTitleGravity="center"
+            app:contentScrim="?attr/colorPrimaryDark"
+
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <!-- <ImageView
+                android:id="@+id/main.backdrop"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/bg_image"
+                app:layout_collapseMode="parallax" />-->
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                app:navigationIcon="@mipmap/qita_icon_fanhui"
+                android:background="#fafafa">
+
+                <TextView
+                    android:id="@+id/toolbar_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:expandedTitleGravity="center"
+                    android:layout_marginRight="60dp"
+                    android:gravity="center"
+                    android:textColor="#333333"
+                    android:textSize="16sp"
+                    android:text="@string/app_name"/>
+            </android.support.v7.widget.Toolbar>
+
+
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
     <FrameLayout
         android:id="@+id/fragment_detail_webview_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="40dp"
+        android:paddingTop="60dp"
         android:paddingBottom="48dp"
         android:orientation="vertical"/>
 
@@ -28,8 +69,9 @@
             android:id="@+id/toolbar_comment_image"
             android:layout_width="160dp"
             android:layout_height="34dp"
+            android:layout_marginLeft="10dp"
+            android:paddingLeft="6dp"
             android:background="@drawable/shape_edit"
-            android:layout_marginLeft="16dp"
             android:layout_weight="1"
             android:gravity="left|center_vertical"
             android:text="我来评论..."/>
@@ -40,7 +82,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/zan1"/>
+            android:src="@mipmap/xiangqing_icon_zan"/>
 
         <ImageView
             android:id = "@+id/toolbar_fav_image"
@@ -48,7 +90,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/shoucang1"/>
+            android:src="@mipmap/xiangqing_icon_shoucang"/>
 
 
         <ImageView
@@ -57,7 +99,16 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/fenxiang1"/>
+            android:src="@mipmap/xiangqing_icon_fenxiang"/>
+
+        <ImageView
+            android:id = "@+id/toolbar_rec_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:src="@mipmap/xiangqing_icon_rec"
+            android:visibility="gone"/>
 
 
 
